--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
       - '8080:8080'
     volumes:
       - ./app:/usr/local/tomcat/webapps/app
+    command: bash -c 'javac -classpath /usr/local/tomcat/lib/servlet-api.jar ./webapps/app/WEB-INF/classes/mypackage/Hello.java && catalina.sh run'
 volumes:
   data: {}
