--- a/app/WEB-INF/web.xml
+++ b/app/WEB-INF/web.xml
@@ -20,4 +20,14 @@
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>mypackage.Test</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+
 </web-app>
