--- a/pom.xml
+++ b/pom.xml
@@ -22,19 +22,25 @@
 
   <build>
     <finalName>webapp</finalName>
-    <sourceDirectory>src/main/java/com/tyamap/simple_servlet</sourceDirectory>
+    <sourceDirectory>src/main/java</sourceDirectory>
+
     <resources>
+
       <resource>
-        <directory>src/main/java/com/tyamap/simple_servlet</directory>
+        <directory>src/main/java</directory>
         <excludes>
           <exclude>**/*.java</exclude>
         </excludes>
       </resource>
+
       <resource>
-        <directory>${project.build.directory}/frontend</directory>
+        <directory>src/main/frontend</directory>
       </resource>
+
     </resources>
+
     <plugins>
+
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
@@ -43,6 +49,7 @@
           <target>11</target>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
@@ -86,6 +93,7 @@
           <installDirectory>${project.build.directory}</installDirectory>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 </project>
