--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,9 @@
 
       <resource>
         <directory>src/main/java</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
       </resource>
 
       <resource>
