--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.2.1",
+    "typescript": ">=3.2.1 <3.6.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
