mod container files

--- a/container/web/default.conf
+++ b/container/web/default.conf
@@ -1,15 +1,39 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
 
-    access_log /var/log/nginx/tomcat_access.log;
-    error_log /var/log/nginx/tomcat_error.log;
+    index index.html index.htm;
+    location = / {
+        root /usr/share/nginx/html;
+    }
 
     location / {
-        proxy_set_header X-Forwarded-Host $host:$server_port;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://servlet:8080/app/;
-        index  index.html index.htm;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   html;
+    }
+    location ~ ^/css/*\.(css)$ {
+        root /usr/share/nginx/html;
+    }
+    location ~ ^/[^/]*\.(css)$ {
+        root /usr/share/nginx/html/css;
+    }
+    location ~ ^/js/*\.(js)$ {
+        root /usr/share/nginx/html;
+    }
+    location ~ ^/[^/]*\.(js)$ {
+        root /usr/share/nginx/html/js;
+    }
+    location ~ ^/img/*\.(jpg|jpeg|png|gif|ico|woff|woff2|ttf)$ {
+        root /usr/share/nginx/html;
+    }
+    location ~ ^/[^/]*\.(jpg|jpeg|png|gif|ico|woff|woff2|ttf)$ {
+        root /usr/share/nginx/html/img;
+    }
+
 }
