--- a/container/web/Dockerfile
+++ b/container/web/Dockerfile
@@ -1,3 +1,7 @@
-FROM nginx
+FROM nginx:stable-alpine as production-stage
 
-ADD default.conf /etc/nginx/conf.d
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
