mod npm buildが時間がかかるので、ホスト側でビルドする

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
     ports:
       # API用のポートを開く
       - '23450:8080'
-  frontend:
-    build: ./frontend
-    ports:
-      - '8080:8080'
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - '8080:8080'
   web:
     build: ./container/web
     ports:
