--- a/container/web/Dockerfile
+++ b/container/web/Dockerfile
@@ -1,5 +1,6 @@
-FROM nginx:stable-alpine as production-stage
+FROM nginx:stable-alpine
 
+COPY ./dist /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 
