--- a/container/web/default.conf
+++ b/container/web/default.conf
@@ -17,6 +17,9 @@ server {
     location = /50x.html {
         root   html;
     }
+    location = /favicon.ico {
+        root /usr/share/nginx/html;
+    }
     location ~ ^/css/*\.(css)$ {
         root /usr/share/nginx/html;
     }
