--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,20 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "vue": "^2.6.6",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^8.0.0",
-    "vue-router": "^3.0.1"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-service": "^4.5.4",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.14.0",
-    "sass-loader": "^7.1.0",
-    "typescript": ">=3.2.1 <3.6.0",
-    "vue-template-compiler": "^2.5.21"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -36,13 +31,12 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "@vue/standard",
-      "@vue/typescript"
+      "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
-      "parser": "@typescript-eslint/parser"
-    }
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "postcss": {
     "plugins": {
@@ -52,6 +46,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not dead"
   ]
 }
